--- a/02_web/03_bootstrap/04_border.html
+++ b/02_web/03_bootstrap/04_border.html
@@ -11,6 +11,17 @@
 </head>
 
 <body>
+
+    <span class="border">hi</span>
+    <span class="border-top">This is</span>
+    <span class="border-right">display</span>
+    <span class="border-bottom">INLINE</span>
+    <span class="border-left">Border?</span>
+
+    <div class="border border-primary p-3">DIV</div>
+
+    <img src="https://picsum.photos/50" alt="random-image" class="m-2 rounded-circle">
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
     </script>
