--- a/02_web/03_bootstrap/05_display.html
+++ b/02_web/03_bootstrap/05_display.html
@@ -11,6 +11,16 @@
 </head>
 
 <body>
+
+    <div class="d-inline p-2 bg-primary text-white">d-inline</div>
+    <div class="d-inline p-2 bg-dark text-white">d-inline</div>
+
+    <span class="d-block p-2 bg-primary text-white">d-block</span>
+    <span class="d-block p-2 bg-dark text-white">d-block</span>
+
+    <div class="d-lg-none bg-success">Hide this when Display is large</div>
+    <div class="d-none d-lg-block bg-warning">??</div>
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
     </script>
