--- a/07_JS/01_basic/01_variable.html
+++ b/07_JS/01_basic/01_variable.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <script>
-        // 변수
+        // 변수 => 쓰다 보니 재 할당해야한다? let
         // ES5(구식) 문법
         var number = 1;
         
@@ -14,7 +14,7 @@
         let word = '외않되';
         word = '왜안돼';
 
-        // 상수
+        // 상수 => 기본적으로 상수로 선언.
         // ES5 : 없음
         // ES6+
         const name = '이설유';
