--- a/07_JS/05_toDoApp/index.html
+++ b/07_JS/05_toDoApp/index.html
@@ -17,6 +17,20 @@
             z-index: 1;
 
         }
+        .save-button {
+            position: fixed;
+            top: 90vh;
+            left: 20vw;
+            z-index: 1;
+
+        }
+        .load-button {
+            position: fixed;
+            top: 83vh;
+            left: 20vw;
+            z-index: 1;
+
+        }
         .done {
             text-decoration: line-through;
             font-style: italic;
@@ -42,26 +56,13 @@
             </div>
         </div>
 
-
         <button id="js-reverse-button" class="ui orange button reverse-button">Reverse</button>
+        <button id="js-save-button" class="ui green button save-button">Save</button>
+        <button id="js-load-button" class="ui blue button load-button">Load</button>
 
-        <!-- Card Area-->
+        <!-- Card Area -->
         <div id="js-todo-area" class="ui container">
-            <!-- Card -->
-            <div class="js-card ui segment secondary">
-                <div class="ui checkbox">
-                    <input id="tmp" type="checkbox">
-                    <label class="done">밥 먹기</label>
-                </div>
-            </div>
-
-            <!-- Card -->
-            <div class="ui segment">
-                <div class="ui checkbox">
-                    <input type="checkbox">
-                    <label>밥 또 먹기</label>
-                </div>
-            </div>
+           
         </div>
 
     </div>
