--- a/08_vue/01_vueToDo.html
+++ b/08_vue/01_vueToDo.html
@@ -5,42 +5,84 @@
 <head>
   <meta charset="UTF-8">
   <title>Todo</title>
+  <style>
+    .completed {
+      text-decoration: line-through;
+      opacity: 0.6;
+    }
+  </style>
 </head>
 
 <body>
   <div id="app">
-    <input type="text" v-model="newTodo" v-on:keyup.enter="addTodo">
+    <select v-model="showMode">
+      <option value="all">모두보기</option>
+      <option value="active">할 일 보기</option>
+      <option value="done">끝난 일 보기</option>
+    </select>
+    <!-- 'v-model' 사용자 입력(input) 값 <=> vue instance [data] 랑 동기화 -->
+    <input type="text" 
+      v-model="newTodo" 
+      v-on:keyup.enter="addTodo"
+    >
     <button v-on:click="addTodo">+</button>
     <button v-on:click="clearCompleted">Clear Completed</button>
     <!-- 'v-' 접두사가 붙으면, 디렉티브(directive)라고 부른다. -->
     <ul>
       <!-- 'v-for' 가 있는 Element 가 반복 -->
+      <!-- 'v-for' 는 반드시 'v-bind:key="UNIQUE_KEY"' 가 있어야 함! -->
       <!-- 'v-if' 는 평가식이 true 일 때만 보임. -->
       <!-- 우선순위 'v-for' > 'v-if' -->
       <!-- 우선순위 'v-for' > 'v-on' -->
-      <li v-for="todo in todos" v-if="!todo.completed" v-on:click="check(todo)">
-        {{ todo.content }}
+      <li 
+        v-for="todo in sortedTodos" 
+        v-bind:key="todo.id" 
+        v-if="!todo.completed" 
+        v-on:click="check(todo)"
+      >
+        <input type="checkbox" v-model="todo.completed">
+        <span>{{ todo.content }}</span>
       </li>
       <!-- 'v-else' 와 'v-if' 는 딱 붙어있어야 함! -->
-      <li v-else v-on:click="check(todo)">
-        [완료] {{ todo.content }}
+      <li v-else 
+        v-bind:key="todo.id" 
+        v-on:click="check(todo)" 
+        class="completed"
+      >
+        <input type="checkbox" v-model="todo.completed">
+        <span>{{ todo.content }}</span>
       </li>
     </ul>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <script>
+    const STORAGE_KEY = 'vue-todos';
+    const todoStorage = {
+      load() {
+        // const storageItems = localStorage.getItem(STORAGE_KEY);
+        // return storageItems ? JSON.parse(storageItems) : []
+
+        return JSON.parse(localStorage.getItem(STORAGE_KEY)   || '[]');  // || : or
+      },
+      save(todosArray) {
+        localStorage.setItem(STORAGE_KEY, JSON.stringify(todosArray));
+      },
+    }
+
     const app = new Vue({
       el: '#app',
       data: { // data 가 수정된다 === DOM re-render 가 일어난다.
         newTodo: '',
-        todos: [],
-      },
-      methods: {
+        todos: todoStorage.load(),
+        showMode: 'all',
+      }, 
+      methods: {  // ()붙임. data 가 수정되는 로직.(setter 함수)
         check: function (todo) {
           todo.completed = !todo.completed;
         },
         addTodo: function () {
           this.todos.push({
+            id: Date.now(),
             content: this.newTodo,
             completed: false,
           })
@@ -55,6 +97,29 @@
           }
           this.todos = newTodos
           // this.todos = this.todos.filter(todo => !todo.completed);
+        },
+        // ES6+ Object literal(편하게 쓰기)
+      },
+      computed: {  // ()절대안붙임. data 를 가공해서 리턴함. 수정X (getter 함수)
+        sortedTodos () {  // 함수 이름이 리턴 되는 값
+          if (this.showMode === 'active') {  // 남은일들만 보여주기
+            return this.todos.filter(todo => !todo.completed);
+          }
+          else if (this.showMode === 'done') {  // 끝난 일들만 보여주기
+            return this.todos.filter(todo => todo.completed);
+          }
+          else {  // 'all'
+            return this.todos;
+          }
+        },
+      },
+      watch: {  // 특정 data 를 관찰함. 해당 data 가 변하면 함수 실행함 <외부API사용>
+        // 함수 이름(key)은 반드시 data 의 key 값과 같아야 한다.
+        todos: {
+          handler: function () {
+            todoStorage.save(this.todos);
+          },
+          deep: true,
         }
       },
     });
