--- a/Study/vuejs/01/01_08/index.html
+++ b/Study/vuejs/01/01_08/index.html
@@ -27,6 +27,9 @@
         <p>{{ count }}번 클릭했습니다.</p>
         <!-- 이 버튼을 클릭하면 increment 메서드가 호출됩니다. -->
         <button v-on:click="increment">카운트 하기</button>
+
+        <p v-bind:class="{ child:isChild, 'is-active':isActive }">Text</p>
+        <p v-bind:style="{ color:textColor, backgroundColor:bgColor }">Text</p>
     
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.js"></script>
