--- a/Study/animalSNS/main.html
+++ b/Study/animalSNS/main.html
@@ -22,11 +22,14 @@
                     <i class="fas fa-search"></i>
                 </a>
             </div>
-            <ul>
-                <li><a href="https://www.naver.com"><i class="fas fa-plus"></i>Upload</a></li>
-                <li><a href="https://www.google.com"><i class="fas fa-paw"></i>Alarm</a></li>
-                <li><a href="https://edu.ssafy.com"><img src="./images/seolyugithub.png" width="80" height="80">MyPage</a></li>
-            </ul>
+            <div class="menus">
+                <ul>
+                    <li><a href="#"><i class="fas fa-plus"></i>Upload</a></li>
+                    <li><a href="#"><i class="fas fa-paw"></i>Alarm</a></li>
+                    <li><a href="#"><img src="./images/seolyugithub.png" width="80"
+                                height="80">MyPage</a></li>
+                </ul>
+            </div>
         </nav>
 
         <div class="container">
