--- a/Study/web/01website/01_layout01.html
+++ b/Study/web/01website/01_layout01.html
@@ -36,6 +36,14 @@
         }
 
         #side {
+            /* float 속성은 블록요소의 정렬 상태를 설정 */
+            /* 기본값은 none */
+            /* left right */
+            /* float 쓰면 height 값 0으로 인식 */
+            /* 깨지는 박스 똑같이 float: left; 써주거나 */
+            /* margin 속성은 요소의 바깥쪽 여백을 설정 */
+            /* margin: 0 auto; 주면 블록구조 가운데정렬. 위아래 0 */
+            /* line-height(문장과 문장사이 간격 설정)을 높이와 같이 설정해주면 한줄일 때 중앙에 오는 효과*/
             float: left;
             width: 300px;
             height: 600px;
