--- a/Study/Vue_JS/Basic/index.html
+++ b/Study/Vue_JS/Basic/index.html
@@ -12,17 +12,10 @@
     <div id="app">
         <div class="row">
             <div class="small-5 columns text-center">
-                <img
-                    v-if="myChoice !== null"
-                    v-bind:src="'images/' + myChoice + '.jpg'" 
-                    alt="" 
-                    class="text-center"
-                >
-                <img
-                    v-else
-                    src="images/question.jpg" 
-                    alt="" 
-                    class="text-center"
+                <img 
+                    :src="myChoiceImg" 
+                    alt=""
+                    class="text-center"    
                 >
                 <h1 class="text-center"><strong>YOU</strong></h1>
             </div>
@@ -30,7 +23,12 @@
                 <h1 style="font-size:100px;"><strong>{{ count }}</strong></h1>
             </div>
             <div class="small-5 columns text-center">
-                <img
+                <img 
+                    :src="comChoiceImg" 
+                    alt=""
+                    class="text-center"
+                >
+                <!-- <img
                     v-if="comChoice !== null"
                     v-bind:src="'images/' + comChoice + '.jpg'" 
                     alt="" 
@@ -41,7 +39,7 @@
                     src="images/question.jpg" 
                     alt="" 
                     class="text-center"
-                >
+                > -->
                 <h1 class="text-center"><strong>Computer</strong></h1>
             </div>
         </div>
@@ -56,7 +54,7 @@
                         alt=""
                     >
                     <img 
-                        v-for="life in 3 - lifeOfMe"
+                        v-for="life in leftLifeOfMe"
                         src="./images/broken-heart.jpg" 
                         class="heart" 
                         alt=""
@@ -72,7 +70,7 @@
                         alt=""
                     >
                     <img 
-                        v-for="life in 3 - lifeOfCom"
+                        v-for="life in leftLifeOfCom"
                         src="./images/broken-heart.jpg" 
                         class="heart" 
                         alt=""
@@ -85,14 +83,12 @@
             <div class="small-6 columns text-center">
                 <div class="row">
                     <div class="small-8 small-offset-2 columns text-center">
-                        <label class="radio-label">
-                            <input type="radio" v-model="myChoice" value="scissor"> 가위
-                        </label>
-                        <label class="radio-label">
-                            <input type="radio" v-model="myChoice" value="rock"> 바위
-                        </label>
-                        <label class="radio-label">
-                            <input type="radio" v-model="myChoice" value="paper"> 보
+
+                        <label
+                            v-for="select in selects"
+                            class="radio-label"
+                        >
+                            <input type="radio" v-model="myChoice" :value="select.value"> {{ select.name }}
                         </label>
                     </div>
                 </div>
