--- a/interactiveWebDevelopment/CSS 변환과 애니메이션/CSS_Transform.html
+++ b/interactiveWebDevelopment/CSS 변환과 애니메이션/CSS_Transform.html
@@ -11,13 +11,21 @@
             display: flex;
         }
         .box {
-            width: 100px;
+            /* width: 100px; */
+            width: auto;
             height: 100px;
             border: 2px solid black;
             background: rgba(255, 255, 0, 0.7);
+
+            /* transform 과 transition 조합 => 변형 애니메이션 */
+            /* transition: 1s linear; */
+            /* transition: 1s cubic-bezier(0.68,-0.15, 0.61, 2.01); */
+            /* transition: 1s 2s; */
+            transition: 2s;
         }
         .box:hover {
-            /* width: 200px; */
+            width: 200px;
+            background: red;
             /* height: 200px; */
             /* transform: scale(2) rotate(25deg); */
             /* transform: skewY(-30deg); */
