--- a/interactiveWebDevelopment/CSS 변환과 애니메이션/CSS_Transform.html
+++ b/interactiveWebDevelopment/CSS 변환과 애니메이션/CSS_Transform.html
@@ -20,7 +20,11 @@
             /* transform 과 transition 조합 => 변형 애니메이션 */
             /* transition: 1s linear; */
             /* transition: 1s cubic-bezier(0.68,-0.15, 0.61, 2.01); */
+
+            /* 1초 동안 애니메이션 동작 duration */
+            /* 2초 후에 transition 동작 delay */
             /* transition: 1s 2s; */
+
             transition: 2s;
         }
         .box:hover {
@@ -28,9 +32,14 @@
             background: red;
             /* height: 200px; */
             /* transform: scale(2) rotate(25deg); */
+
+            /* 비틀기 skew */
             /* transform: skewY(-30deg); */
+
+            /* 이동 */
             /* transform: translate(30px, 10px); */
             /* transform: translateY(-30px); */
+
             /* transform: scale(1.5); */
 
             /* 기준점 */
