--- a/interactiveWebDevelopment/CSS 변환과 애니메이션/CSS_Animation.html
+++ b/interactiveWebDevelopment/CSS 변환과 애니메이션/CSS_Animation.html
@@ -19,14 +19,19 @@
             }
         }
         .box {
+            /* 글씨 center 정렬 */
             display: flex;
             align-items: center;
             justify-content: center;
+
             width: 100px;
             height: 100px;
             border: 2px solid #000;
             background: #fff000;
-            animation: sample-ani 3s linear forwards;
+
+            /* 애니메이션 끝난 시점에 100% 위치에 있도록 -> forwards */
+            animation: sample-ani 3s linear forwards 3;
+            
             /* animation: sample-ani 3s cubic-bezier(0, 0, 0.13, 1.2) infinite alternate; */
             /* animation: sample-ani 3s cubic-bezier(0, 0, 0.13, 1.2) infinite reverse; */
             /* animation: sample-ani 3s cubic-bezier(0, 0, 0.13, 1.2) infinite alternate-reverse; */
