--- a/interactiveWebDevelopment/CSS 변환과 애니메이션/CSS_Animation2.html
+++ b/interactiveWebDevelopment/CSS 변환과 애니메이션/CSS_Animation2.html
@@ -9,6 +9,7 @@
             background: #222;
         }
         @keyframes spaceship-ani {
+            /* 0% 는 from, 100% 는 to 시작점은 생략 가능 */
             to {
                 background-position: -2550px 0;
             }
