--- a/interactiveWebDevelopment/javaScript/index.html
+++ b/interactiveWebDevelopment/javaScript/index.html
@@ -67,6 +67,36 @@
 
         // document.querySelector('.ilbuni:nth-child(2)')
         // document.querySelector('.characters .ilbuni:nth-child(2)')
+
+        // 동적으로 element 속성을 넣을 수 있다
+        const char = document.querySelector('.characters');
+        char.setAttribute('data-id', 123);
+
+        console.log(char.getAttribute('data-id'));
+
+        const pElem = document.createElement('p');
+        pElem.innerHTML = '<a href="#">안녕</a>???';
+        console.log(pElem);
+
+        // appendChild 는 막내 자식으로 붙여줌
+        const charactersElem = document.querySelector('.characters');
+        charactersElem.appendChild(pElem);
+
+        charactersElem.removeChild( document.querySelector('.b') );
+
+        // 첫번쨰꺼 가져오기
+        const ilbuni1 = document.querySelector('.ilbuni');
+        // 클래스 붙이기
+        ilbuni1.classList.add('special');
+
+        // 아래와 같이 하면 special 클래스만 남음
+        // 기존꺼 보존 안함
+        // ilbuni1.className = 'special'
+
+        const ilbuni3 = document.querySelector('.ilbuni');
+        // ilbuni3.classList.remove('ilbuni');
+
+        // ilbuni3.classList.toggle('ilbuni');
     </script>
 </body>
 
