--- a/interactiveWebDevelopment/javaScriptEvent/eventDelegation.html
+++ b/interactiveWebDevelopment/javaScriptEvent/eventDelegation.html
@@ -74,23 +74,16 @@
 
     <script>
         (function () {
-            // $('.ilbuni').on('click', )
-            const ilbuniGroup = document.querySelectorAll('.ilbuni');
+            // 이벤트 위임
             const stage = document.querySelector('.stage');
 
             function clickHandler(e) {
-                // console.log(this);
-                // console.log(e.currentTarget);
-                // stage.removeChild(this);
-                this.parentNode.removeChild(this);
+                if (e.target.classList.contains('ilbuni')) {
+                    stage.removeChild(e.target);
+                }
             }
 
-            for (let i = 0; i < ilbuniGroup.length; i++) {
-                ilbuniGroup[i].addEventListener('click', clickHandler);
-            }
-            // ilbuniGroup[0].addEventListener('click', clickHandler);
-            // ilbuniGroup[1].addEventListener('click', clickHandler);
-            // ilbuniGroup[2].addEventListener('click', clickHandler);
+            stage.addEventListener('click', clickHandler);
         })();
     </script>
 </body>
