--- a/interactiveWebDevelopment/3DScroll/index.html
+++ b/interactiveWebDevelopment/3DScroll/index.html
@@ -14,10 +14,10 @@
     <div class="progress-bar-con">
         <div class="progress-bar"></div>
     </div>
-    <!-- <div class="select-character">
+    <div class="select-character">
         <button class="select-character-btn select-character-btn-ilbuni" data-char="ilbuni"></button>
         <button class="select-character-btn select-character-btn-ragirl" data-char="ragirl"></button>
-    </div> -->
+    </div>
 
     <div class="world">
         <div class="stage">
@@ -49,9 +49,34 @@
             <!--// house -->
 
             <!-- 캐릭터 놓이는 곳 -->
-
+            <!-- <div class="character">
+                <div class="character-face-con character-head">
+                    <div class="character-face character-head-face face-front"></div>
+                    <div class="character-face character-head-face face-back"></div>
+                </div>
+                <div class="character-face-con character-torso">
+                    <div class="character-face character-torso-face face-front"></div>
+                    <div class="character-face character-torso-face face-back"></div>
+                </div>
+                <div class="character-face-con character-arm character-arm-right">
+                    <div class="character-face character-arm-face face-front"></div>
+                    <div class="character-face character-arm-face face-back"></div>
+                </div>
+                <div class="character-face-con character-arm character-arm-left">
+                    <div class="character-face character-arm-face face-front"></div>
+                    <div class="character-face character-arm-face face-back"></div>
+                </div>
+                <div class="character-face-con character-leg character-leg-right">
+                    <div class="character-face character-leg-face face-front"></div>
+                    <div class="character-face character-leg-face face-back"></div>
+                </div>
+                <div class="character-face-con character-leg character-leg-left">
+                    <div class="character-face character-leg-face face-front"></div>
+                    <div class="character-face character-leg-face face-back"></div>
+                </div>
+            </div> -->
         </div>
-        <!--// stage -->
+        <!-- // stage -->
     </div>
     <!--// world -->
 
