--- a/SVG/02CSSjavaScript/01.html
+++ b/SVG/02CSSjavaScript/01.html
@@ -41,7 +41,6 @@
 <body>
     <svg class="face" id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 590.96 633.62">
         <style>
-            <![CDATA[
             .face {
                 position: absolute;
                 top: 0;
@@ -70,10 +69,10 @@
                 }
             }
 
-            .face_eye {
-                /* transform-origin: center center; */
+            <!-- .face_eye {
+                transform-origin: center center;
                 animation: eye-ani 0.5s infinite alternate;
-            }
+            } -->
 
             .face_eye:nth-of-type(1) {
                 transform-origin: 189.64px 356.25px;
@@ -82,8 +81,19 @@
             .face_eye:nth-of-type(2) {
                 transform-origin: 394.92px 356.25px;
             }
-            ]]>
+
+            .ani-on .face_eye {
+                animation: eye-ani 0.5s infinite alternate;
+            }
         </style>
+
+        <script>
+            const faceElem = document.querySelector('.face');
+            faceElem.addEventListener('click', function () {
+                this.classList.toggle('ani-on');
+            })
+        </script>
+
         <defs>
             <style>
                 .cls-1,
@@ -130,6 +140,12 @@
         <ellipse class="face_hair" class="cls-4" cx="292.28" cy="198.47" rx="110.3" ry="64.34" />
     </svg>
 
+    <!-- <script>
+        const faceElem = document.querySelector('.face');
+        faceElem.addEventListener('click', function () {
+            this.classList.toggle('ani-on');
+        })
+    </script> -->
 </body>
 
 </html>
