--- a/interactiveWebWithJavaScript/01/01_2.html
+++ b/interactiveWebWithJavaScript/01/01_2.html
@@ -21,6 +21,49 @@
         const MAX_LEVEL = 99;
 
         // camelCase
+
+        // 변수와 상수 <- 데이터
+        // 데이터 타입 : 숫자형, 문자열, 논리형
+        // typeof n;
+
+        // 7 % 3
+        // % 는 나머지 연산
+        // 1
+
+        // 7 + 3 * 2
+        // 13
+        // 연산 우선순위
+        // (7 + 3) * 2
+        // 20
+
+        // typeof 3;
+        // "number"
+        // typeof 3.14;
+        // "number"
+        
+        // Syntactic Sugar 꿀
+        // x = x + 1;
+        // x += 1;
+
+        // x = x * 2;
+        // x *= 2;
+
+        // x = x - 3;
+        // x -= 3;
+
+        // x = x / 2;
+        // x /= 2;
+
+        // x = x % 7;
+        // x %= 7;
+
+        // x = x + 1;
+        // x += 1;
+        // x++;
+
+        // x = x - 1;
+        // x -= 1;
+        // x--;
     </script>
 </body>
 </html>
