--- a/interactiveWebWithJavaScript/05HTML_CSS_JS/index.html
+++ b/interactiveWebWithJavaScript/05HTML_CSS_JS/index.html
@@ -116,6 +116,7 @@
         }
 
         // 키보드 이벤트 핸들링
+        // 이 페이지의 키보드를 누르는 이벤트가 파라미터로 넘어옴
         function processKeyEvent(event) {
             // clickHome();
             // console.log(event);
