--- a/Study/Vue_JS/Vue_js시작하기-AgeOfVueJS/VueJSCode/playground/data-binding.html
+++ b/Study/Vue_JS/Vue_js시작하기-AgeOfVueJS/VueJSCode/playground/data-binding.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="app">
-        <p v-binc:id="uuid">{{ num }}</p>
+        <p v-bind:id="uuid" v-bind:class="name">{{ num }}</p>
         <!-- 위 내용은 실제 화면에서 아래와 같이 나타남 -->
         <!-- <p id="abc1234">{{ num }}</p> -->
         <p>{{ doubleNum }}</p>
@@ -19,7 +19,8 @@
             el: '#app',
             data: {
                 num: 10,
-                uuid: 'abc1234'
+                uuid: 'abc1234',
+                name: 'text-blue'
             },
             computed: {
                 doubleNum: function() {
